<package>

  <name>tcp_bridge</name>
  <version>0.3.0</version>
  <description>The tcp_bridge package</description>
  <author email="jimmy840308@gmail.com">Peng</author>
  <maintainer email="jimmy840308@gmail.com">Peng</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

</package>
